# benchmark

./: README.md  readme
binarian/c_call_cpp/: Makefile  add.cpp  add.h  main.c
binarian/macro/: a.out  main.cpp
binarian/offsetof/: Makefile  main.cpp
binarian/ptrace/: Makefile  dummy-loop.c  main.c
binarian/stack_view/: Makefile  main.c
chopin/scripts/: start-all.sh
chopin/tf_cnn/: default.cfg  perf.data  perf.script  report.csv  report.js  slog  sofa.pcap  sofa_time.txt
config/: hosts.template
crackcode/: hashtable.cpp
d3/scatterplot/: index.html
father/exercise-02/: start-workers.sh
father/tf_cnn/: cpu-train.sh  dist-train.sh  gpu-train.sh  start-all.sh  start-ps.sh  start-workers.sh  stop-all.sh  tf_cnn_benchmarks.py
graph/longest-path/: Makefile  main.cpp
graph/longest-path-boost/: Makefile  main.cpp
graph/rbtree/: Makefile  main.cpp
graph/tools/: disp.py
graph/tools/dot_demos/: demo1.dot  demo2.dot  demo3.dot
hadoop/config-directory/: core-site.xml  hdfs-site.xml  yarn-site.xml
howfastmm/: howfast.sh
howfastmm/gemm/clang++O0/: Makefile  run
howfastmm/gemm/clang++O3/: Makefile  run
howfastmm/gemm/g++O0/: Makefile  run
howfastmm/gemm/g++O3/: Makefile  run  run.S
howfastmm/gemm/openmp/: Makefile  main.cpp  run
latex/: annotated.tex  classQTstyle__Test.tex  md_README.tex  refman.tex
libpcap/: Makefile  main.cpp
lttng/: lttng_trace.sh
math/matrix/: Makefile  main.cpp  matrix
math/sqrt/: Makefile  main.c
memory/: Makefile  main.cpp
mmap/: Makefile  main.c
mpi/: tutorial.md
mpi/NPB3.3-MPI/config/: make.def
mpi/config/: cmd.sh  genhosts.sh  hosts.txt
mpi/demo/: demo.sh
mpi/exercise-01/: main.cpp
mpi/exercise-02/: Makefile  main.cpp
mpi/exercise-03/: Makefile  exercise
mpi/gemm/: Makefile  main.cpp
mpi/ppmpi/chap03/: CMakeLists.txt  greetings.c
mpi/ppmpi/chap05/: CMakeLists.txt
mpi/ppmpi/chap12/: CMakeLists.txt
mpi/tools/: demo-npb.sh  demo.sh  setenv.sh
network/tcp_socket/: Makefile  client.cpp  server.cpp
openmp/exercise-01/: Makefile  main.cpp
python-gemm/: Makefile  gemm.cpp  gemm.py  gemm_np.py  gemm_tf.py
regex/: Makefile  lttng-analyzer  main.cpp
shm/: Makefile  main.c
simd/avx/: Makefile  main.cpp
spark/: wc_hdfs.py
src-mcml/: Makefile  mcml.h  mcmlio.c  mcmlmain.c  sample.mci  sample2.mco
tensorflow/exercise-01/: example.py
tensorflow/exercise-02/: start-ps.sh  start-workers.sh
tensorflow/scripts/: start-all.sh
threads/exercise-01/: main.cpp
threads/exercise-02/: Makefile  main.cpp
threads/exercise-03/: main.cpp
threads/exercise-04/: Makefile  main.cpp
tools/: genhosts.sh  setenv-hadoop.sh  setenv.sh  setup-all.sh  setup-network.sh  ssh_copy_id_to_all.sh
udacity_dnn/: softmax.py
zsim_config/: compute  heartbeat  i72600.cfg  main.c  out.cfg  zsim-cmp.h5  zsim-ev.h5  zsim.h5  zsim.out
(+4 files in other folders)
